# FaceControlNet

./: .gitignore  README.md  ideas.md  pyproject.toml  train_controlnet.py  train_controlnet_cli.py
data_utils/: preprocess_dataset.py
dockerfiles/: Dockerfile
lightning_modules/: lit_datamodule.py  lit_facecontrol.py
notebooks/: IDA.ipynb
utils/: image_utils.py
